<resources>
    <string name="app_name">Feeling 1: Personal Trainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="background_image">background</string>
    <string name="action_settings">Settings</string>
    <string name="profile_weight">Paino (kg)</string>
    <string name="profile_height">Pituus (cm)</string>
    <string name="profile_weight_progress">Paino indeksi</string>
    <string name="profile_gender">Sukupuoli</string>
    <string name="profile_waist">Vyötärön leveys (cm)</string>
    <string name="profile_hip">Lantio leveys (cm)</string>
    <string name="profile_neck">Kaula leveys (cm)</string>
    <string name="profile_update">Päivitä profiili</string>
    <string name="profile_age">Syntymäpäivä (päivä.kuukausi.vuosi)</string>
    <string name="exercise_0">
        Lämmittely: 15 min soutulaite \n
        Liike 1   Polvien ojennuslaite (etureidet)\n
        1.	Säädä selkänoja siten, että polvitaive ei paina penkin reunaan. Säädä alempi rulla säärien alaosaan. Aloitus asennossa jalat ovat hieman penkin alapuolella. \n
        2.	Ojenna jalat vaakatasoon ja palauta hallitusti aloitusasentoon. \n
        Sarjat 3 , toistot 12 -15 ja vastus kevyt. Lepo 1 min. \n \n

        Liike 2  Kapea soutuliike alataljassa ( yläselkä)\n
        1.	Istu penkille polvet kiinni eturulliin ja kurotu kahvaan käsillä. \n
        2.	Aloita liike vetämällä olkapäitä taakse ja lopuksi rutista lapaluita yhteen. Pidä hartiat alhaalla koko ajan. \n
        3.	Palauta hallitusti aloitusasentoon. \n
        Sarjat 3, toistot 12-15 ja vastus kevyt. Lepo 1min. \n\n

        Liike 3  Polvien koukistuslaite ( takareidet) \n
        1.	Säädä selkänoja siten, että ylin rulla ei paina polvia. Alin rulla on pohkeen alaosassa. Nosta jalat vaakatasoon aloitusasentoon. \n
        2.	Koukista jalkoja kohti penkin alaosaa ja palauta hallitusti ylös. \n
        Sarjat 3 , toistot 12-15 ja vastus kevyt. Lepo 1min. \n\n

        Liike 4  Rintalaite  ( rintalihakset) \n
        1.	Säädä penkin korkeus siten, että kätesi ovat kahvoista kiinnipitäessä hartioiden tasossa . Säädä liikeradan laajuus kapeahkoksi. \n
        2.	Purista kädet yhteen vartalon edessä ja pidä kyynärpäät hieman koukussa liikkeen ajan. Palauta hallitusti. \n
        Sarjat 3 , toistot 12-15 ja vastus kevyt. Lepo 1min. \n\n

        Liike 5  Vartalonkiertolaite ( vinot vatsalihakset) \n
        1.	Säädä penkin korkeus siten, että olkapäät ovat etutyynyjen tasolla. Istu penkille ja purista polvia alatyynyjä vasten. Säädä aloitusasento noin 45 asteen kulmaan. \n
        2.	Kierrä alavartaloa toiseen suuntaan ja pidä ylävartalo paikoillaan. Tee liike vatsalihaksilla ei käsillä. Muista jarruttaa palautuksessa. \n
        sarjat 2 , toistot 12-15 + 12-15 ja vastus kevyt. Lepo 1min. \n
    </string>
    <string name="exercise_1">
        Lämmittely : 15 min crosstrainer \n
        Liike 1  Vaakaprässi (etureidet, takareidet, loitontajat ja pakara) \n
        1.	Laita levypainot laitteeseen. Istu penkille siten, että selkä on hyvin nojaa vasten ja pakarat kiinni penkissä. Nosta jalat  lantiota hieman leveämpään asentoon laudalle. Pidä kantapäät kiinni alustassa koko liikkeen ajan. \n
        2.	Työnnä jalat lähes suoraksi ja päästä lukko pois. Koukista jalat lähelle kehoa ja työnnä takaisin lähes suoraksi. Muista laittaa lukko päälle , kun olet tehnyt sarjasi. \n
        Sarjat 3 , toistot 12-15 ja vastus keskiraskas -kevyt. Lepo 1 min. \n\n

        Liike 2  Askelkyykky smith-laitteessa (pakarat) \n
        1.	Laita levypainot laitteeseen. \n
        2.	Asetu siten, että tanko on hartioiden takana ei niskassa. \n
        Vie toinen jalka pitkälle eteen ja toinen taakse. Käännä tangon koukut aukiasentoon taaksepäin. \n
        3.	Kyykkää alas pitäen etummainen polvi jalkaterän kanssa samassa linjassa ja suuntaa taaempaa polvea kohti lattiaa. Nouse ylös painamalla etummaista kantapäätä lattiaan. \n
        Sarjat 3 , toistot 12-15 + 12-15 ja vastus kevyt. Lepo 1min. \n\n

        Liike 3  Selän ojennus vinopenkissä (pakarat , takareidet, alaselkä) \n
        1.	Säädä penkki siten, että reitesi ovat penkkiä vasten ja lantio hieman penkin reunan yläpuolella. \n
        2.	Kallista ylävartaloa alas kunnes tunnet venytyksen takareidessä. \n
        3.	Puristaen pakaraa nouse takaisin aloitusasentoon. \n
        Sarjat 3 , toistot 12-15 ja vastus kehonpaino. Lepo 1 min. \n\n

        Liike 4  Pohjelaite (pohkeet) \n
        1.	Laita levypainot laitteeseen. Istu penkille ja vedä tuet reisien päälle. Voit säätää tukea sopivaksi ettei paina polvien päälle. Aseta päkiät alaraudalle ja nosta kantapäät ylös. Vedä lukko aukiasentoon sivulle. \n
        2.	Tee liike laskien kantapäitä niin alas, että tunnet venytyksen ja ponnista takaisin kannat ylös. \n
        3.	Sarjan tehtyäsi laita lukko takaisin päälle. \n
        Sarjat 3 , toistot 12-15 ja vastus kevyt. Lepo 1 min. \n\n

        Liike 5  Vatsan rutistus laitteessa (suorat vatsalihakset) \n
        1.	Laita levypaino laitteeseen taakse. \n
        2.	Istu ja laita jalat alarullien taakse, paina pää tukeen kiinni ja tartu kahvoista käsillä. \n
        3.	Nosta jaloilla ja vedä käsillä, että saat laitteen liikkeelle. Keskity sitten tekemään liike jännittäen vatsalihaksia ja muista hengittää ulos rutistaessa ja pitää pää tuessa kiinni koko liikkeen ajan. \n
        Sarjat 3 , toistot 12-15 , vastus kevyt-keskiraskas. Lepo 1min.
    </string>
    <string name="profile_email">Sähköposti</string>

    <string name="default_text">Default</string>
    <string name="default_integer">5</string>

    <string name="profile_weight_value">1</string>
    <string name="profile_height_value">2</string>
    <string name="profile_waist_value">3</string>
    <string name="profile_hip_value">4</string>
    <string name="profile_neck_value">5</string>

    <string name="smith_description">Smith-laite on kuntosalilaite, jossa levytanko liikkuu ylös ja alas kiskojen varassa.
        Sillä voidaan suorittaa samoja liikkeitä kuin vapaalla levytangollakin, esimerkiksi jalkakyykky ja penkkipunnerrus.
        Joidenkin liikkeiden, kuten hauiskäännön suorittamiseen laite ei kuitenkaan sovellu. \n
        Smith-laitteen käyttö on aloittelijalle usein helpompaa kuin vapaalla tangolla harjoittelu.
        Pidemmälle ehtineet voimailijat pitävät kuitenkin usein vapaalla tangolla tehtyjä liikkeitä parempina,
        sillä ne kehittävät paremmin koordinaatiota, ja niissä tangon liikerata on luonnollisempi.</string>
    <string name="soutulaite_description">Soutulaite on kuntoilulaite, jolla voi harjoittaa aerobista kuntoa, sekä lihasten, lähinnä selän ja hauisten kestävyyttä. Soutulaitteet ovat yleisiä kuntosaleilla ja niitä on myös kotikäytössä.
        Samanlaista soutuliikettä kuin soutulaitteessa voi harjoittaa myös alataljassa. Tällöin kuitenkin käytetään yleensä raskaita painoja ja tavoitellaan lihasten massan ja voiman kehitystä.</string>
    <string name="thumbnail_desc">thumbnail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nimi</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_genders">
        <item>Mies</item>
        <item>Nainen</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
