<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_weight_progress"
                android:textSize="18sp" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Liikunta tunteina"
                android:textSize="18sp" />
            <com.jjoe64.graphview.GraphView
                android:id="@+id/activity"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_weight"
                android:layout_marginTop="20dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textPersonName"
                android:text="0" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0" />

            <TextView
                android:id="@+id/txtWaist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_waist"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputWaist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0" />

            <TextView
                android:id="@+id/txtHip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_hip"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputHip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0" />

            <TextView
                android:id="@+id/txtNeck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_neck"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputNeck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="0" />

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_update" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>